added 12 resource pages

--- a/resources/resource8.html
+++ b/resources/resource8.html
@@ -29,7 +29,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">IsaacsList</a>
+        <a class="navbar-brand" href="../index.html">isaacsList</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -60,100 +60,13 @@
             </form>
         </div>
     </nav>
-<div></div>
+
     <div class="container">
         <div class="starter-template">
-            <h1>IsaacsList</h1>
-            <p class="lead">A curated list of veteran resources. <br> <br> Dicta iste nostrum doloribus doloremque vel est neque quaerat non nesciunt amet illo, ipsa, enim, placeat expedita alias quis consequatur. Illo, mollitia.</p>
+            <h1>Resource 8</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Dicta iste nostrum doloribus doloremque vel est neque quaerat non nesciunt amet illo, ipsa, enim, placeat expedita alias quis consequatur. Illo, mollitia.</p>
         </div>
     </div>
-    <div class="container-fluid bg-3 text-center">    
-  <h3>Veteran Resources</h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-    <a href="resources/resource1.html">
-      <p>Some text..1</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3"> 
-      <a href="resources/resource2.html">
-      <p>Some text..2</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3"> 
-      <a href="resources/resource3.html">
-      <p>Some text..3</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <a href="resources/resource4.html">
-      <p>Some text..4</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-  </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">    
-  <div class="row">
-    <div class="col-sm-3">
-      <a href="resources/resource5.html">
-      <p>Some text..5</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3"> 
-      <a href="resources/resource6.html">
-      <p>Some text..6</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3"> 
-      <a href="resources/resource7.html">
-      <p>Some text..7</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <a href="resources/resource8.html">
-      <p>Some text..8</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-  </div>
-</div><br>
-    <div class="container-fluid bg-3 text-center">    
-  <div class="row">
-    <div class="col-sm-3">
-      <a href="resources/resource9.html">
-      <p>Some text..9</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3"> 
-      <a href="resources/resource10.html">
-      <p>Some text..10</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3"> 
-      <a href="resources/resource11.html">
-      <p>Some text..11</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <a href="resources/resource12.html">
-      <p>Some text..12</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-  </div>
-</div><br>
-
     <!-- /.container -->
 
 
