--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
   <div class="row">
     <div class="col-sm-3">
     <a href="resources/resource1.html">
-      <p>Some text..1</p>
+      <p>Resource 1</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3"> 
       <a href="resources/resource2.html">
-      <p>Some text..2</p>
+      <p>Resource 2</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3"> 
       <a href="resources/resource3.html">
-      <p>Some text..3</p>
+      <p>Resource 3</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <a href="resources/resource4.html">
-      <p>Some text..4</p>
+      <p>Resource 4</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
@@ -101,25 +101,25 @@
   <div class="row">
     <div class="col-sm-3">
       <a href="resources/resource5.html">
-      <p>Some text..5</p>
+      <p>Resource 5</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3"> 
       <a href="resources/resource6.html">
-      <p>Some text..6</p>
+      <p>Resource 6</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3"> 
       <a href="resources/resource7.html">
-      <p>Some text..7</p>
+      <p>Resource 7</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <a href="resources/resource8.html">
-      <p>Some text..8</p>
+      <p>Resource 8</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
@@ -129,25 +129,25 @@
   <div class="row">
     <div class="col-sm-3">
       <a href="resources/resource9.html">
-      <p>Some text..9</p>
+      <p>Resource 9</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3"> 
       <a href="resources/resource10.html">
-      <p>Some text..10</p>
+      <p>Resource 10</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3"> 
       <a href="resources/resource11.html">
-      <p>Some text..11</p>
+      <p>Resource 11</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <a href="resources/resource12.html">
-      <p>Some text..12</p>
+      <p>Resource 12</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
